--- a/reactmodal/react-tutorial-master/public/main.html
+++ b/reactmodal/react-tutorial-master/public/main.html
@@ -10,11 +10,17 @@
     <script src="https://unpkg.com/jquery@3.1.0/dist/jquery.min.js"></script>
     <script src="https://unpkg.com/remarkable@1.6.2/dist/remarkable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.30.3/react-bootstrap.js"></script>
+
+		<script type="text/babel" src="main.js"></script>
+    <script type="text/babel" src="ticket.js"></script>
+    <!-- <script src="ticket.js"></script> -->
+
       
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
   </head>
   <body>
     <div id="content"></div>
+		<div id="modal"></div>
     <script type="text/babel" src="main.js"></script>
   </body>
 </html>
