modal is working; need to fix some bugs and then wire the frontend to the backend

--- a/reactmodal/react-tutorial-master/public/main.html
+++ b/reactmodal/react-tutorial-master/public/main.html
@@ -13,6 +13,7 @@
 
 		<script type="text/babel" src="main.js"></script>
     <script type="text/babel" src="ticket.js"></script>
+    <script type="text/babel" src="presentation.js"></script>
     <!-- <script src="ticket.js"></script> -->
 
       
