made the search bar, working on the autocomplete class

--- a/reactmodal/react-tutorial-master/public/main.html
+++ b/reactmodal/react-tutorial-master/public/main.html
@@ -11,10 +11,27 @@
     <script src="https://unpkg.com/remarkable@1.6.2/dist/remarkable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.30.3/react-bootstrap.js"></script>
 
-		<script type="text/babel" src="main.js"></script>
-    <script type="text/babel" src="ticket.js"></script>
-    <script type="text/babel" src="presentation.js"></script>
-    <!-- <script src="ticket.js"></script> -->
+
+    <script type="text/babel" src="components/autocompleteField.js"></script>
+    <script type="text/babel" src="components/checkboxField.js"></script>
+    <script type="text/babel" src="components/inputField.js"></script>
+    <script type="text/babel" src="components/selectField.js"></script>
+    <script type="text/babel" src="components/staticInputField.js"></script>
+    <script type="text/babel" src="components/textboxInputField.js"></script>
+
+		<script type="text/babel" src="components/tabInventory.js"></script>
+		<script type="text/babel" src="components/tabCustomer.js"></script>
+		<script type="text/babel" src="components/tabStatus.js"></script>
+		<script type="text/babel" src="components/tabOther.js"></script>
+
+		<script type="text/babel" src="components/ticket.js"></script>
+
+		<script type="text/babel" src="components/buttongrid.js"></script>
+		<script type="text/babel" src="components/ticketlist.js"></script>
+
+		<script type="text/babel" src="components/ticketbox.js"></script>
+    <!-- <script type="text/babel" src="presentation.js"></script> -->
+    <!-- <script type="text/babel" src="ticket.js"></script> -->
 
       
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
@@ -22,6 +39,6 @@
   <body>
     <div id="content"></div>
 		<div id="modal"></div>
-    <script type="text/babel" src="main.js"></script>
+    <!-- <script type="text/babel" src="main.js"></script> -->
   </body>
 </html>
